优化配置文件

--- a/laokou-cloud/laokou-register/src/main/resources/application-dev.properties
+++ b/laokou-cloud/laokou-register/src/main/resources/application-dev.properties
@@ -9,3 +9,5 @@ eureka.client.registry-fetch-interval-seconds=5
 eureka.server.enable-self-preservation=false
 eureka.server.peer-eureka-nodes-update-interval-ms=5000
 eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=127.0.0.1
+eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
