--- a/laokou-base/laokou-log/pom.xml
+++ b/laokou-base/laokou-log/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
+        <artifactId>laokou-base</artifactId>
         <groupId>io.laokou</groupId>
-        <artifactId>laokou-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.laokou</groupId>
-    <artifactId>laokou-base</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>laokou-log</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>laokou-common</module>
-        <module>laokou-log</module>
-    </modules>
 
 </project>
