--- a/laokou-base/laokou-log/pom.xml
+++ b/laokou-base/laokou-log/pom.xml
@@ -28,7 +28,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
