--- a/config/sso/config-cache/sso+default+application.properties
+++ b/config/sso/config-cache/sso+default+application.properties
@@ -36,3 +36,5 @@ sso.shiro[9].permission=anon
 spring.redis.jedis.pool.max-idle=10
 sso.shiro[2].permission=anon
 sso.shiro[10].permission=anon
+sso.shiro[12].permission=anon
+sso.shiro[12].url=/sys/log/api/operate/insert
