--- a/laokou-service/laokou-admin/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/src/main/resources/application.yml
@@ -91,3 +91,5 @@ sso:
       url: /sys/auth/api/logout
     - permission: anon
       url: /sys/auth/api/zfbLogin
+    - permission: anon
+      url: /sys/log/api/operate/insert
