--- a/config/sso/config-cache/sso+default+application.properties
+++ b/config/sso/config-cache/sso+default+application.properties
@@ -38,3 +38,5 @@ sso.shiro[2].permission=anon
 sso.shiro[10].permission=anon
 sso.shiro[12].permission=anon
 sso.shiro[12].url=/sys/log/api/operate/insert
+sso.shiro[13].permission=anon
+sso.shiro[13].url=/sys/log/api/login/insert
