--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 server:
+  compression:
+    # 开启压缩
+    enabled: true
+    # 配置支持压缩 MIME-TYPE
+    mime-types: text/html,text/xml,text/plain,application/xml,application/json,application/x-www-form-urlencoded
   address: 192.168.62.1
   port: 5555
   max-http-header-size: -1
@@ -77,6 +82,9 @@ hystrix:
             maxConcurrentRequests: 30000
 
 feign:
+  httpclient:
+    # 开启httpclient
+    enable: ture
   hystrix:
     enabled: true
   client:
@@ -101,3 +109,6 @@ management:
   endpoint:
     health:
       show-details: always
+
+logging:
+  file: logs/${spring.application.name}/info.log
