--- a/laokou-cloud/laokou-register/src/main/resources/application-prod.properties
+++ b/laokou-cloud/laokou-register/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-eureka.client.service-url.defaultZone=http://root:koushenhai@192.168.62.1:1111/eureka/
+eureka.client.service-url.defaultZone=http://${spring.security.user.name}:${spring.security.user.password}@${eureka.instance.ip-address}:${server.port}/eureka/
 eureka.instance.lease-renewal-interval-in-seconds=5
 eureka.instance.lease-expiration-duration-in-seconds=10
 #间隔多久去拉取服务注册信息
@@ -9,5 +9,5 @@ eureka.client.registry-fetch-interval-seconds=5
 eureka.server.enable-self-preservation=false
 eureka.server.peer-eureka-nodes-update-interval-ms=5000
 eureka.instance.prefer-ip-address=true
-eureka.instance.ip-address=192.168.62.1
+eureka.instance.ip-address=175.178.69.253
 eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
