--- a/laokou-cloud/laokou-register/src/main/resources/application-dev.properties
+++ b/laokou-cloud/laokou-register/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-eureka.client.service-url.defaultZone=http://root:koushenhai@127.0.0.1:1111/eureka/
+eureka.client.service-url.defaultZone=http://${spring.security.user.name}:${spring.security.user.password}@${eureka.instance.ip-address}:${server.port}/eureka/
 eureka.instance.lease-renewal-interval-in-seconds=5
 eureka.instance.lease-expiration-duration-in-seconds=10
 #间隔多久去拉取服务注册信息
