--- a/config/admin/config-cache/admin+default+application.properties
+++ b/config/admin/config-cache/admin+default+application.properties
@@ -1,8 +1,9 @@
 #Persisted by DefaultConfig
 #Sun Jun 19 21:19:32 CST 2022
 sso.shiro[0].url=/sys/auth/api/login
-spring.redis.address=192.168.62.128\:6379
+spring.redis.address=175.178.69.253\:6379
 spring.redis.timeout=6000ms
+spring.redis.password=ENC(AHdloD6Rp4bu9SYZJbO7bcwErNCQm43R1b4zh6x4B10=)
 sso.shiro[5].permission=anon
 sso.shiro[2].url=/swagger/**
 sso.shiro[4].url=/v2/api-docs
@@ -14,13 +15,13 @@ sso.shiro[8].url=/druid/**
 jasypt.encryptor.password=koushenhai5201314wumeihua
 sso.shiro[1].permission=anon
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.url=jdbc\:mysql\://192.168.62.128\:3306/kcloud?serverTimezone\=CTT&useUnicode\=true&characterEncoding\=utf-8&allowMultiQueries\=true&allowPublicKeyRetrieval\=true
+spring.datasource.druid.url=jdbc\:mysql\://175.178.69.253\:3306/kcloud?serverTimezone\=CTT&useUnicode\=true&characterEncoding\=utf-8&allowMultiQueries\=true&allowPublicKeyRetrieval\=true
 sso.shiro[4].permission=anon
 spring.redis.database=0
 sso.shiro[7].permission=anon
 sso.shiro[1].url=/webjars/**
 sso.shiro[0].permission=anon
-spring.datasource.druid.password=ENC(SX9kPzLDaZb9kGOl2QBziw\\\=\\\=)
+spring.datasource.druid.password=ENC(AHdloD6Rp4bu9SYZJbO7bcwErNCQm43R1b4zh6x4B10=)
 sso.shiro[3].url=/actuator/**
 sso.shiro[5].url=/swagger-ui.html/**
 sso.shiro[10].url=/sys/auth/api/logout
