--- a/laokou-cloud/laokou-gateway/src/main/resources/application-prod.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ server:
     enabled: true
     # 配置支持压缩 MIME-TYPE
     mime-types: text/html,text/xml,text/plain,application/xml,application/json,application/x-www-form-urlencoded
-  address: 192.168.62.1
+  address: 10.0.8.7
   port: 5555
   max-http-header-size: -1
   tomcat:
@@ -13,8 +13,9 @@ server:
 spring:
   redis:
     database: 0
-    host: 192.168.62.128
+    host: 124.222.196.51
     port: 6379
+    password: koushenhai123456
     timeout: 6000ms #连接超时时长（毫秒）
     jedis:
       pool:
@@ -25,11 +26,11 @@ spring:
   boot:
     admin:
       client:
-        url: http://192.168.62.1:5000/monitor
+        url: http://10.0.8.7:5000/monitor
         username: root
         password: koushenhai
         instance:
-          service-base-url: http://192.168.62.1:${server.port}
+          service-base-url: http://10.0.8.7:${server.port}
           prefer-ip: true
 
 logging:
