--- a/laokou-service/laokou-admin/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/src/main/resources/application.yml
@@ -54,6 +54,19 @@ mybatis-plus:
     jdbc-type-for-null: 'null'
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 60000 #缺省为1000
+          #hystrix配置隔离策略为信号量模式
+          strategy: SEMAPHORE
+          #增加并发量设置（默认是10）
+          semaphore:
+            maxConcurrentRequests: 30000
+
 feign:
   httpclient:
     # 开启httpclient
@@ -66,34 +79,9 @@ feign:
         connectTimeout: 10000
         readTimeout: 15000
 
-admin:
-  oss: {"fastdfsDomain":"http://124.222.196.51","fastdfsGroup":"group1","localDomain":"http://175.178.69.253","localPath":"/opt/temp","localPrefix":"upload","type":0,"aliyunDomain":"https://koushenhai.oss-cn-shenzhen.aliyuncs.com","aliyunPrefix":"laokou","aliyunEndPoint":"https://oss-cn-shenzhen.aliyuncs.com","aliyunAccessKeyId":"LTAIPIOiuCK4ZK3o","aliyunAccessKeySecret":"dtYg8khtfEUM3FlV2FvVH6bHyezdqi","aliyunBucketName":"koushenhai"}
-  auth:
-    - permission: anon
-      url: /sys/auth/api/login
-    - permission: anon
-      url: /webjars/**
-    - permission: anon
-      url: /swagger/**
-    - permission: anon
-      url: /actuator/**
-    - permission: anon
-      url: /v2/api-docs
-    - permission: anon
-      url: /swagger-ui.html/**
-    - permission: anon
-      url: /swagger-resources/**
-    - permission: anon
-      url: /sys/auth/api/captcha
-    - permission: anon
-      url: /druid/**
-    - permission: anon
-      url: /sys/auth/api/userInfo
-    - permission: anon
-      url: /sys/auth/api/logout
-    - permission: anon
-      url: /sys/auth/api/zfbLogin
-    - permission: anon
-      url: /sys/log/api/operate/insert
-    - permission: anon
-      url: /sys/log/api/login/insert
+#ribbon的超时时间
+ribbon:
+  ReadTimeout: 30000
+  ConnectTimeout: 30000
+  eager-load:
+    enabled: true
