修改配置文件

--- a/config/admin/config-cache/admin+default+application.properties
+++ b/config/admin/config-cache/admin+default+application.properties
@@ -1,44 +1,10 @@
 #Persisted by DefaultConfig
-#Mon Jun 27 14:14:02 CST 2022
-sso.shiro[0].url=/sys/auth/api/login
-spring.redis.timeout=6000ms
-sso.shiro[5].permission=anon
-sso.shiro[2].url=/swagger/**
-sso.shiro[13].permission=anon
-sso.shiro[4].url=/v2/api-docs
-spring.redis.jedis.pool.max-active=-1
-sso.shiro[6].url=/swagger-resources/**
-sso.shiro[8].permission=anon
-sso.shiro[11].url=/sys/auth/api/zfbLogin
-sso.shiro[8].url=/druid/**
-sso.shiro[13].url=/sys/log/api/login/insert
-jasypt.encryptor.password=koushenhai5201314wumeihua
-sso.shiro[1].permission=anon
-spring.redis.password=ENC(AHdloD6Rp4bu9SYZJbO7bcwErNCQm43R1b4zh6x4B10\=)
-spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.url=jdbc\:mysql\://124.222.196.51\:3306/kcloud?serverTimezone\=CTT&useUnicode\=true&characterEncoding\=utf-8&allowMultiQueries\=true&allowPublicKeyRetrieval\=true
-sso.shiro[4].permission=anon
-sso.shiro[12].permission=anon
-spring.redis.database=0
-sso.shiro[7].permission=anon
-spring.redis.port=6379
-sso.shiro[1].url=/webjars/**
-sso.shiro[0].permission=anon
+#Sat Jul 02 10:23:08 CST 2022
 spring.datasource.druid.password=ENC(AHdloD6Rp4bu9SYZJbO7bcwErNCQm43R1b4zh6x4B10\=)
-sso.shiro[3].url=/actuator/**
-sso.shiro[5].url=/swagger-ui.html/**
-sso.shiro[10].url=/sys/auth/api/logout
+spring.datasource.druid.url=jdbc\:mysql\://124.222.196.51\:3306/kcloud?serverTimezone\=CTT&useUnicode\=true&characterEncoding\=utf-8&allowMultiQueries\=true&allowPublicKeyRetrieval\=true
+spring.redis.port=6379
+fdfs.tracker-list=124.222.196.51\:22122
+admin.oss={"fastdfsDomain"\:"http\://124.222.196.51","fastdfsGroup"\:"group1","localDomain"\:"http\://175.178.69.253","localPath"\:"/opt/temp","localPrefix"\:"upload","type"\:1,"aliyunDomain"\:"https\://koushenhai.oss-cn-shenzhen.aliyuncs.com","aliyunPrefix"\:"laokou","aliyunEndPoint"\:"https\://oss-cn-shenzhen.aliyuncs.com","aliyunAccessKeyId"\:"LTAIPIOiuCK4ZK3o","aliyunAccessKeySecret"\:"dtYg8khtfEUM3FlV2FvVH6bHyezdqi","aliyunBucketName"\:"koushenhai"}
 spring.datasource.druid.username=ENC(7j+MYBNM2fhq8WST3DE3WA\=\=)
-sso.shiro[7].url=/sys/auth/api/captcha
-sso.shiro[3].permission=anon
-sso.shiro[12].url=/sys/log/api/operate/insert
-sso.shiro[9].url=/sys/auth/api/userInfo
-sso.shiro[11].permission=anon
-spring.redis.jedis.pool.min-idle=5
-sso.shiro[6].permission=anon
-spring.redis.jedis.pool.max-wait=-1ms
-sso.shiro[9].permission=anon
-spring.redis.jedis.pool.max-idle=10
-sso.shiro[2].permission=anon
+spring.redis.password=ENC(AHdloD6Rp4bu9SYZJbO7bcwErNCQm43R1b4zh6x4B10\=)
 spring.redis.host=124.222.196.51
-sso.shiro[10].permission=anon
