--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -76,3 +76,16 @@ management:
   endpoint:
     health:
       show-details: always
+
+laokou:
+  uris:
+    - /sys/auth/api/captcha
+    - /sys/auth/api/login
+    - /sys/auth/api/zfbLogin
+    - /actuator/**
+    - /swagger/api-docs
+    - /swagger-resources/**
+    - /swagger-ui.html
+    - /v2/api-docs
+    - /webjars/**
+    - /druid/**
