--- a/laokou-cloud/laokou-register/docker/Dockerfile
+++ b/laokou-cloud/laokou-register/docker/Dockerfile
@@ -8,6 +8,6 @@ EXPOSE 1111
 # 挂载
 VOLUME /data
 # 复制文件
-ADD register.jar /opt/register.jar
+COPY register.jar /opt/register.jar
 # 执行命令
 ENTRYPOINT java -Xms256m -Xmx512m -jar /opt/register.jar > /opt/register.log
