--- a/laokou-service/laokou-redis/pom.xml
+++ b/laokou-service/laokou-redis/pom.xml
@@ -15,7 +15,16 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.15.5</version>
         </dependency>
         <dependency>
             <groupId>io.laokou</groupId>
