--- a/laokou-parent/pom.xml
+++ b/laokou-parent/pom.xml
@@ -34,6 +34,8 @@
         <swagger.version>2.8.0</swagger.version>
         <!--admin版本-->
         <spring-boot-admin.version>2.0.0</spring-boot-admin.version>
+        <!--flowable版本-->
+        <flowable.version>6.3.0</flowable.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -75,6 +77,12 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${swagger.version}</version>
+            </dependency>
+            <!-- 定义 flowable 版本 -->
+            <dependency>
+                <groupId>org.flowable</groupId>
+                <artifactId>flowable-spring-boot-starter-process</artifactId>
+                <version>${flowable.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
