--- a/laokou-service/laokou-admin/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/src/main/resources/application.yml
@@ -122,6 +122,8 @@ admin:
       url: /sys/log/api/login/insert
     - permission: anon
       url: /sys/log/api/login/insert
+    - permission: anon
+      url: /flowable/definition/api/image
 
 flowable:
   database-schema-update: true
