--- a/laokou-cloud/laokou-monitor/src/main/resources/application-test.yml
+++ b/laokou-cloud/laokou-monitor/src/main/resources/application-test.yml
@@ -3,9 +3,9 @@ server:
   address: 192.168.62.1
   servlet:
     context-path: /monitor
-  connection-timeout: 60000
   tomcat:
     max-http-header-size: -1
     max-connections: -1
-    max-http-post-size: -1
     max-threads: -1
+    max-http-form-post-size: -1
+    connection-timeout: 60000
