--- a/laokou-parent/pom.xml
+++ b/laokou-parent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.RELEASE</version>
+        <version>2.2.5.RELEASE</version>
         <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -29,11 +29,11 @@
         <!--mysql版本-->
         <mysql.version>5.1.46</mysql.version>
         <!--cloud版本-->
-        <spring-cloud.version>Finchley.SR1</spring-cloud.version>
+        <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
         <!--swagger版本-->
         <swagger.version>2.8.0</swagger.version>
         <!--admin版本-->
-        <spring-boot-admin.version>2.0.0</spring-boot-admin.version>
+        <spring-boot-admin.version>2.2.2</spring-boot-admin.version>
         <!--flowable版本-->
         <flowable.version>6.6.0</flowable.version>
     </properties>
